dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: microsvcruntime
  name: microsvcruntime
  namespace: msrnamespace
spec:
  replicas: 1
  selector:
    app: microsvcruntime
    deploymentconfig: microsvcruntime
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: microsvcruntime
        deploymentconfig: microsvcruntime
    spec:		  
      containers:
        - env:
            - name: myvalue
              valueFrom:
               configMapKeyRef:
                key: myvalue
                name: my-config
            - name: installdir
              valueFrom:
               configMapKeyRef:
                key: installdir
                name: my-config
          image: >-
            172.30.1.1:5000/msrnamespace/microruntime:v1
          imagePullPolicy: Always
          name: microsvcruntime
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: 
            limits:
              cpu: '1'
              memory: 768Mi
            requests:
              cpu: '1'
              memory: 768Mi		
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - microsvcruntime
        from:
          kind: ImageStreamTag
          name: 'microruntime:v1'
          namespace: msrnamespace
      type: ImageChange
