service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microsvcruntime
  name: microsvcruntimesrv
  namespace: msrnamespace
spec:
  clusterIP: 
  ports:
    - name: 8080-tcp
      port: 56565
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: microsvcruntime
  sessionAffinity: None
  type: ClusterIP
