route.yaml
apiVersion: v1
kind: Route
metadata:
  name: microsvcruntime
  namespace: msrnamespace
spec:
  host: microsvcruntime.usvmapimgmt02.eur.ad.sag
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: microsvcruntimesrv
    weight: 100
  wildcardPolicy: None
